# cturk-ocr

./: .gitignore  README.md  ocr.ipynb  ocr_demo.ipynb  pyproject.toml
images/: metadata.csv
images_test/: metadata.csv
